truffle/src/com.oracle.truffle.sl.test/src/tests/error/TypeError01.sl
/*
 * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
 * Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 */

function main() {  
  3 - "4";  
}  
