truffle/src/com.oracle.truffle.sl.test/src/tests/error/TypeError01.output
Type error at TypeError01.sl line 7 col 3: operation "-" not defined for Number 3, String "4"
